Fixing Z-index for recaptcha

--- a/resources/css/util/util.css
+++ b/resources/css/util/util.css
@@ -440,6 +440,10 @@
     align-items: center;
 }
 
+.grecaptcha-badge {
+    z-index: 3;
+}
+
 
 @media screen and (max-width: 768px) {
     .desktop-only,
